# rust-learning

./: Cargo.toml  Makefile  README.md  Taskfile.yml
.github/workflows/: rust.yml
.scripts/: test.sh
anyhow-1/: Cargo.toml
anyhow-1/src/: main.rs
aoc-2020/: Cargo.toml
aoc-2020/day-01/: Cargo.toml
aoc-2020/day-01/src/: main.rs
aoc-2020/src/: lib.rs  sets.rs
aoc-2020/utils/: Cargo.toml
aoc-2020/utils/src/: lib.rs  perms.rs  permutations.rs
aoc-2022/day-11/: Cargo.toml
aoc-2022/day-12/: Cargo.toml  example-nano.txt  example-small.txt
aoc-2022/day-13/: Cargo.toml
aoc-2022/day-14/: Cargo.toml
aoc-2022/day-15/: Cargo.toml
aoc-2022/day-16/: Cargo.toml  nano.txt
aoc-2022/day-17/: Cargo.toml
aoc-2022/day-17/src/: board.rs  gust.rs  main.rs  shapes.rs
aoc-2022/day-18/: Cargo.toml
aoc-2022/day-19/: Cargo.toml  README.md
aoc-2022/day-19/src/: main.rs
aoc-2023/: .bacon-locations  .gitignore  Cargo.toml  bacon.toml
async-fns-1/: Cargo.toml
async-fns-1/src/: main.rs
async-rust/: Cargo.toml
aws-sso-1/: Cargo.toml
aws-sso-1/src/: main.rs  profile.rs
axum-2/: Cargo.toml
axum-2/src/: main.rs
axum-3/: Cargo.toml
axum-3/src/: main.rs
axum-webapp-1/: Cargo.toml  Taskfile.yml
axum-webapp-1/src/: error.rs  main.rs
bignums-1/: Cargo.toml
bignums-1/src/: main.rs
binary-tree-1/src/: main.rs
borrow-1/: Cargo.toml
borrow-1/src/: main.rs
cargo-bundle-1/: .justfile  Cargo.toml  icon_blue.icns
cat-1/: Cargo.toml  hello-1.txt  hello-2.txt
cat-1/src/: args.rs  error.rs  input.rs  iter.rs  main.rs
channels-1/: Cargo.toml
channels-1/src/: main.rs
chat-0/: Cargo.toml
chat-0/src/: lib.rs  main.rs
chat-1/: Cargo.toml
chat-1/client/: Cargo.toml
chat-1/client/src/: main.rs
chat-1/prot/: Cargo.toml
chat-1/protocol/: Cargo.toml
chat-1/protocol/src/: lib.rs  verify.rs
chat-1/server/: Cargo.toml
chat-1/src/: main.rs
chat-3/: Cargo.toml
chat-3/src/: main.rs
chat-4/: Cargo.toml
chat-4/src/: lib.rs  main.rs
chat-5/: Cargo.toml
chat-5/src/: io.rs  main.rs  server.rs
chat-6/src/: main.rs
chat-7/: Cargo.toml
clap/: Cargo.toml
clap/src/: main.rs
clone-futures-1/: Cargo.toml  Taskfile.yml
clone-futures-1/src/: main.rs  tests.rs
closures-1/src/: main.rs
closures-2/src/: main.rs
closures-3/: Cargo.toml
closures-3/src/: main.rs
closures-4/: Cargo.toml
closures-4/src/: main.rs
command-result/: Cargo.toml
command-result/src/: main.rs
concurrency-1/src/: main.rs
cow-1/: Cargo.toml
cow-1/src/: main.rs
dao-1/: Cargo.toml
dao-1/src/: main.rs
dao-1/src/dao/: mod.rs
echo-1/: Cargo.toml
echo-2/: Cargo.toml
echo-2/src/: main.rs
errs-1/: Cargo.toml
errs-1/src/: main.rs
excel/: Cargo.toml
excel-2/: Cargo.toml
excel-2/src/: main.rs
excel-3/: Cargo.toml
excel-3/src/: main.rs
excel/src/: main.rs
fs-write-bench/: Cargo.toml
fs-write-bench/benches/: io_bench.rs
hashmap-1/: Cargo.toml
hashmap-1/src/: hashmap.rs  main.rs
histsum/: Cargo.toml  README.md
histsum/src/: main.rs
how-many-threads/: Cargo.toml
how-many-threads/src/: main.rs
interior-mutability-1/: Cargo.toml
interior-mutability-1/src/: main.rs
io-1/: Cargo.toml
io-1/src/: main.rs
io-2/src/: main.rs
iter-1/: Cargo.toml
iter-1/src/: main.rs
iter-2/: Cargo.toml
iter-2/src/: main.rs
iter-3/: Cargo.toml
iter-3/src/: lib.rs  main.rs  tree.rs
iterators-1/: Cargo.toml
iterators-1/src/: main.rs
iterators-2/: Cargo.toml
iterators-2/src/: main.rs
iterators-3/: Cargo.toml
iterators-3/src/: main.rs
kv-store-1/: Cargo.toml
kv-store-1/src/: main.rs
loco1/: Cargo.toml  justfile
loco2/: Cargo.toml  justfile
loco2/config/: development.yaml  test.yaml
loco2/examples/: playground.rs
loco2/src/: app.rs
log-1/: Cargo.toml  Config.toml
log-1/src/: main.rs
logos-1/: Cargo.toml
logos-1/src/: main.rs
macros-1/: Cargo.toml
macros-1/src/: macros.rs  main.rs
macros-2/: Cargo.toml
macros-2/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
monty-hall/: Cargo.toml
monty-hall/src/: main.rs
n-queens/: .gitignore  Cargo.toml  Taskfile.yml
newtype-1/: Cargo.toml
nom-1/: Cargo.toml
nom-2/: Cargo.toml
obrc/: Cargo.toml
oreilly/async-3/: Cargo.toml
oreilly/async-3/src/: lib.rs  utils.rs
paths2tree/: Cargo.toml  input.txt
pin-box-1/: Cargo.toml
prefix-tree/: Cargo.toml
proc-macros/: Cargo.toml
prog-rust-fractal/: Cargo.toml
prog-rust-gcd/: Cargo.toml
quickreplace/: .gitignore  Cargo.toml
ratatui-1/: Cargo.toml
rc-refcell-1/: Cargo.toml
recursion-1/: Cargo.toml
registry/: Cargo.toml
reqwest-mw-ext/: Cargo.toml
reqwest-mw-ext/src/: main.rs
rql/: .gitignore  Cargo.toml  rustfmt.toml
rql/src/: app.rs  dao.rs  lib.rs  pager.rs  table.rs  tables.rs  widgets.rs
rss-gen/: Cargo.toml
rust-echo-1/: Makefile
rust-echo-3/: Cargo.toml
rust_todo/: Cargo.toml
scheduler-1/: Cargo.toml
scheduler-2/: Cargo.toml
scripts/: clean.sh
sctl/: Cargo.toml
select-1/: Cargo.toml
serde-plist-1/: Cargo.toml
shuttle-pastebin/: Cargo.toml  README.md  form.html
shuttle-pastebin/src/: paste_id.rs
shuttle-podcast-app/: Cargo.toml  podcast.xml
shuttle-sudoku/: Cargo.toml
slint-1/: Cargo.toml
sorting-1/: Cargo.toml
sqlx-migrate/: .gitignore  Cargo.toml
sqlx-migrate-mem/: Cargo.toml
sqlx-migrate-mem-2/: Cargo.toml
sqlx-migrate-mem/migrations/: 20230823163501_init.down.sql  20230823163501_init.up.sql
sqlx-migrate-mem/src/: main.rs
sqlx-migrate-pin/: Cargo.toml
sqlx-migrate-pin/src/: main.rs
stacks-1/: Cargo.toml
stacks-1/src/: main.rs
tokio-mini-redis-0/: Cargo.toml
tokio-sig-1/: Cargo.toml
tokio-tutorial/: Cargo.toml
toml-edit-1/: Cargo.toml
toml-edit-1/src/: main.rs
tracing-1/: Cargo.toml
traits-2/: Cargo.toml
tree-1/: Cargo.toml
tree-2/: Cargo.toml
tui-1/: Cargo.toml
wasm-game-of-life/: .justfile  Cargo.toml  LICENSE_MIT  README.md
with-axum-htmx-askama/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs
yew-1/: Cargo.toml  index.html
(+228 files in other folders)
