[package]
name = "aoc-2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
once_cell = "1.18.0"
regex = "1.10.2"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
