[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
enum-ordinalize = "4.2.1"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
once_cell = "1.18.0"
rayon = "1.8.0"
regex = "1.10.2"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.4"

[profile.release]
debug = false
