[package]
name = "aws-sso-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "0.56.1"
aws-sdk-s3 = "0.30.0"
aws-sdk-sso = "0.30.0"
aws-sdk-sts = "0.30.0"
aws-types = "0.56.1"
chrono = { version = "0.4.28", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive", "env"] }
hex = "0.4.3"
home = "0.5.5"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
sha1 = "0.10.5"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
