[package]
name = "chat-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["client", "server", "protocol"]

[workspace.dependencies]
anyhow = "1.0.75"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.29", features = ["serde"] }
async-trait = "0.1.73"

[[bin]]
name = "client"
path = "client/src/main.rs"

[[bin]]
name = "server"
path = "server/src/main.rs"

[dependencies]

