[workspace]
members = ["protocol", "client", "server"]

[workspace.dependencies]
anyhow = "1.0.75"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.29", features = ["serde"] }
async-trait = "0.1.73"
clap = { version = "4.4.6", features = ["derive"] }

