[package]
name = "fs-write-bench"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "io_bench"
harness = false

[dependencies]
bencher = "0.1.5"
once_cell = "1.19.0"
rand = "0.8.5"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
