[package]
name = "reqwest-mw-ext"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
http = "1.1.0"
reqwest = { version = "0.12.5", features = ["json", "multipart", "stream"] }
reqwest-middleware = "0.3.2"
reqwest-retry = "0.6.0"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"
wiremock = "0.6.0"
