[package]
name = "rql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive", "env"] }
crossterm = "0.27.0"
ctrlc = { version = "3.4.1", features = ["termination"] }
ratatui = "0.23.0"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
