[package]
name = "libre-collin"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.17.0"
rocket = "0.5.0-rc.3"
shuttle-rocket = "0.17.0"
tokio = "1.28.2"
rand = "0.8.4"
