[package]
name = "sqlx-migrate-pin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] } # Simple SQL
tokio = { version = "1.32.0", features = ["full"] }
