[package]
name = "stacks-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-backtrace = "0.2.6"
backtrace = "0.3.69"
clap = { version = "4.4.2", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-attributes = "0.1.26"
tracing-subscriber = "0.3.17"
