[package]
name = "toml-edit-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.28", features = ["serde"] }
home = "0.5.5"
serde = { version = "1.0.188", features = ["serde_derive"] }
tokio = { version = "1.32.0", features = ["full"] }
toml_edit = "0.19.14"
