[package]
name = "day-17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
rand = "0.8.5"
regex = "1.9.1"
thiserror = "1.0.44"

[profile.release]
debug = 1
