[package]
name = "day-19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.9.1"
strum = "0.25.0"
strum_macros = "0.25.1"
